--- a/index.css
+++ b/index.css
@@ -12,10 +12,10 @@ body {
 .left-section {
   flex-grow: 0.7;
   box-shadow: none;
-
+  margin-left: 50px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .text-box h1{
@@ -122,9 +122,8 @@ body {
 
   .left-section {
     flex-grow: 0;
-    padding: 40px 0px;
     min-height: auto;
-    justify-content: center;
+    /* justify-content: center; */
   }
 
   .text-box h1 {
@@ -158,7 +157,7 @@ body {
 
   .right-section {
     flex-grow: 0;
-    min-height: 350px;
+    min-height: 370px;
     height: 350px;
   }
 }
@@ -190,7 +189,7 @@ body {
   }
 
   .right-section {
-    min-height: 280px;
+    min-height: 310px;
     height: 280px;
   }
 }
